--- a/index.html
+++ b/index.html
@@ -37,15 +37,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img class="animated-aboutme9" src="images/aboutme9.png" alt="logo">
-                    <img class="animated-aboutme8" src="images/aboutme8.png" alt="logo">
-                    <img class="animated-aboutme7" src="images/aboutme7.png" alt="logo">
-                    <img class="animated-aboutme6" src="images/aboutme6.png" alt="logo">
-                    <img class="animated-aboutme5" src="images/aboutme5.png" alt="logo">
-                    <img class="animated-aboutme4" src="images/aboutme4.png" alt="logo">
-                    <img class="animated-aboutme3" src="images/aboutme3.png" alt="logo">
-                    <img class="animated-aboutme2" src="images/aboutme2.png" alt="logo">
-                    <img src="images/aboutme1.png" alt="logo">    
+                    <img src="images/aboutme.png" alt="aboutme">    
                 </div>
                 <div class="about-col-2">
                     <h1>About <span>me</span></h1>
@@ -58,25 +50,20 @@
                         <h2 class="tab-links" onclick="opentab('experience')">Experience</h2>
                     </div>
                     <div class="tab-contents skills active-tab" id="skills">
-                        <ul>
                             <img src="images/skill1.png" alt="html">
                             <img src="images/skill2.png" alt="html">
+                            <img src="images/skill3.png" alt="html">
+                            <img src="images/skill4.png" alt="html">
+                            <img src="images/skill5.png" alt="html">
+                            <img src="images/skill6.png" alt="html">
+                            <img src="images/skill7.png" alt="html">
+                            <img src="images/skill8.png" alt="html">
+                            <img src="images/skill9.png" alt="html">
+                            <img src="images/skill10.png" alt="html">
+                            <img src="images/skill11.png" alt="html">
 
-                            <img src="images/skill1.png" alt="html">
 
-                            <img src="images/skill1.png" alt="html">
 
-                            <img src="images/skill1.png" alt="html">
-
-                            <img src="images/skill1.png" alt="html">
-
-                            <img src="images/skill1.png" alt="html">
-
-                            <img src="images/skill1.png" alt="html">
-
-                            <img src="images/skill1.png" alt="html">
-
-                        </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
@@ -96,7 +83,7 @@
             </div>
         </div>
     </div>
-<script src="https://kit.fontawesome.com/05049b2b78.js" crossorigin="anonymous"></script>
+<script src="script.js"></script>
 <script>
    var tablinks = document.getElementsByClassName("tab-links");
    var tabcontents = document.getElementsByClassName("tab-contents");
