--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jon Mendizabal - Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,12 +23,15 @@
             </nav>
             <div class="home">
                 <div class="home-text">
+                    <div class="home-logo">
+                        <img src="images/logo.png" alt="">
+                    </div>
                     <h1>Hi, I'm <span>Jon</span></h1>
                     <p>FULL-STACK DEVELOPER</p>
                     <p>GAME DEVELOPER</p>
                 </div>
                 <div class="home-image">
-                    <img src="images/Home.png" alt="Home Image">
+                    <img src="images/Home2.png" alt="Home Image">
                 </div>
             </div>
         </div>
@@ -50,32 +54,66 @@
                         <h2 class="tab-links" onclick="opentab('experience')">Experience</h2>
                     </div>
                     <div class="tab-contents skills active-tab" id="skills">
+                        <div class="skillcard">
                             <img src="images/skill1.png" alt="html">
+                            <h3>HTML</h3>
+                        </div>
+                        <div class="skillcard">
                             <img src="images/skill2.png" alt="html">
+                            <h3>CSS</h3>
+                        </div>
+                        <div class="skillcard">
                             <img src="images/skill3.png" alt="html">
+                            <h3>JavaScript</h3>
+                        </div>
+                        <div class="skillcard">
                             <img src="images/skill4.png" alt="html">
+                            <h3>React.js</h3>
+                        </div>
+                        <div class="skillcard">
                             <img src="images/skill5.png" alt="html">
+                            <h3>C#</h3>
+                        </div>
+                        <div class="skillcard">
                             <img src="images/skill6.png" alt="html">
+                            <h3>SQL</h3>
+                        </div>
+                        <div class="skillcard">
+                            <img src="images/skill12.png" alt="html">
+                            <h3>Dapper</h3>
+                        </div>
+                        <div class="skillcard">
                             <img src="images/skill7.png" alt="html">
+                            <h3>Unity</h3>
+                        </div>
+                        <div class="skillcard">
                             <img src="images/skill8.png" alt="html">
+                            <h3>Git</h3>
+                        </div>
+                        <div class="skillcard">
                             <img src="images/skill9.png" alt="html">
+                            <h3>GitHub</h3>
+                        </div>
+                        <div class="skillcard">
                             <img src="images/skill10.png" alt="html">
+                            <h3>Siemens NX</h3>
+                        </div>
+                        <div class="skillcard">
                             <img src="images/skill11.png" alt="html">
-
-
-
+                            <h3>QuikCAST</h3>
+                        </div>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
                             <li><span>2023 - 2024</span><br>.NET Full-stack developer course at Lexicon Växjö (Sweden)</li>
-                            <li><span>2008 - 2010</span><br>HNC of Casting manufacturing [&] powder metallurgy at Lea-Artibai (Spain)</li>
+                            <li><span>2008 - 2010</span><br>HNC of Casting manufacturing &#38; powder metallurgy at Lea-Artibai (Spain)</li>
                             <li><span>2005 - 2008</span><br>Polymers Engineering at London Metropolitan University (Spain)</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
                             <li><span>2011 - 2023</span><br>Plant Manager/Product designer at AML SA (Spain)</li>
-                            <p>Managed production at a sand casting steel foundry. Daily [&] weekly MTO production planning, pattern designing, 3D drawing and process simulation have been part of my main responsibilities.</p>
+                            <p>Managed production at a sand casting steel foundry. Daily &#38; weekly MTO production planning, pattern designing, 3D drawing and process simulation have been part of my main responsibilities.</p>
                             <li><span>2017 - 2017</span><br>Plant Manager/Product designer at ATPL PL (India)</li><p>Started up the production line in a newly opened foundry, designed workflow, taught employees and led the production team.</p>
                         </ul>
                     </div>
@@ -83,7 +121,7 @@
             </div>
         </div>
     </div>
-<script src="script.js"></script>
+<script src="https://kit.fontawesome.com/05049b2b78.js" crossorigin="anonymous"></script>
 <script>
    var tablinks = document.getElementsByClassName("tab-links");
    var tabcontents = document.getElementsByClassName("tab-contents");
