--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jon Mendizabal - Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="/images/logo.png">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/05049b2b78.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <div id="home">
@@ -15,6 +17,7 @@
                 <ul>
                     <li><a href="#"><span><i class="fa-solid fa-house"></i></span> Home</a></li>
                     <li><a href="#"><span><i class="fa-solid fa-address-card"></i></span> About me</a></li>
+                    <li><a href="#"><span><i class="fa-solid fa-bell-concierge"></i></span> My services</a></li>
                     <li><a href="#"><span><i class="fa-solid fa-globe"></i></span> My websites</a></li>
                     <li><a href="#"><span><i class="fa-solid fa-gamepad"></i></span> My games</a></li>
                     <li><a href="#"><span><i class="fa-solid fa-laptop-code"></i></span> My programs</a></li>
@@ -31,7 +34,7 @@
                     <p>GAME DEVELOPER</p>
                 </div>
                 <div class="home-image">
-                    <img src="images/Home2.png" alt="Home Image">
+                    <img src="images/Home.png" alt="Home Image">
                 </div>
             </div>
         </div>
@@ -121,7 +124,77 @@
             </div>
         </div>
     </div>
-<script src="https://kit.fontawesome.com/05049b2b78.js" crossorigin="anonymous"></script>
+       <!----------------services------------------>
+    <div id="services">
+        <div class="container">
+            <h1>My <span>services</span></h1>
+            <div class="services-list">
+                <div>
+                    <i class="fa-solid fa-code"></i>
+                    <h2>Web Design</h2>
+                    <p>Elevate your digital experience and captivate your audience with a website that sets you apart.</p>
+                    <a href="#">Contact me</a>
+                </div>
+                <div>
+                    <i class="fa-solid fa-server"></i>
+                    <h2>Backend Solutions</h2>
+                    <p>Empower your digital infrastructure with robust backend programming solutions.</p>
+                    <a href="#">Contact me</a>
+                </div>
+                <div>
+                    <i class="fa-solid fa-ghost"></i>
+                    <h2>Game Development</h2>
+                    <p>Gaming experiences that push boundaries and keep players coming back for more.</p>
+                    <a href="#">Contact me</a>
+                </div>
+            </div>
+        </div>
+    </div>
+       <!----------------websites------------------>
+    <div id="websites">
+        <div class="container">
+            <h1>My <span>Websites</span></h1>
+                <div class="work-list">
+                    <div class="work">
+                        <img src="images/website2.png" alt="Spotify clone">
+                    </div>
+                    <div class="work">
+                        <img src="images/website1.png" alt="My Portfolio">
+                    </div>
+                </div>    
+        </div>
+    </div>
+       <!----------------games------------------>
+       <div id="games">
+        <div class="container">
+            <h1>My <span>Games</span></h1>
+            <div class="work-list">
+                <div class="work">
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+       <!----------------programs------------------>
+       <div id="programs">
+        <div class="container">
+            <h1>My <span>Programs</span></h1>
+            <div class="work-list">
+                <div class="work">
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+       <!----------------contact------------------>
+       <div id="contact">
+        <div class="container">
+            <h1>Contact <span>me</span></h1>
+
+        </div>
+    </div>
+
+
 <script>
    var tablinks = document.getElementsByClassName("tab-links");
    var tabcontents = document.getElementsByClassName("tab-contents");
