--- a/index.html
+++ b/index.html
@@ -4,37 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jon Mendizabal - Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="/images/logo.png">
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/05049b2b78.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 
 </head>
 <body>
     <div id="home">
+        <nav>
+            <img src="images/NavLogo.png" class="nav-logo" alt="longlogo">
+            <ul>
+                <li><a href="#"><span><i class="fa-solid fa-house"></i></span> Home</a></li>
+                <li><a href="#"><span><i class="fa-solid fa-address-card"></i></span> About me</a></li>
+                <li><a href="#"><span><i class="fa-solid fa-bell-concierge"></i></span> Services</a></li>
+                <li><a href="#"><span><i class="fa-solid fa-globe"></i></span> Websites</a></li>
+                <li><a href="#"><span><i class="fa-solid fa-gamepad"></i></span> Games</a></li>
+                <li><a href="#"><span><i class="fa-solid fa-laptop-code"></i></span> Programs</a></li>
+                <li><a href="#"><span><i class="fa-solid fa-envelope"></i></span> Contact</a></li>
+            </ul>
+        </nav>
+
         <div class="container">
-            <nav>
-                <img src="images/MainLogo.png" class="logo" alt="longlogo">
-                <ul>
-                    <li><a href="#"><span><i class="fa-solid fa-house"></i></span> Home</a></li>
-                    <li><a href="#"><span><i class="fa-solid fa-address-card"></i></span> About me</a></li>
-                    <li><a href="#"><span><i class="fa-solid fa-bell-concierge"></i></span> My services</a></li>
-                    <li><a href="#"><span><i class="fa-solid fa-globe"></i></span> My websites</a></li>
-                    <li><a href="#"><span><i class="fa-solid fa-gamepad"></i></span> My games</a></li>
-                    <li><a href="#"><span><i class="fa-solid fa-laptop-code"></i></span> My programs</a></li>
-                    <li><a href="#"><span><i class="fa-solid fa-envelope"></i></span> Contact me</a></li>
-                </ul>
-            </nav>
             <div class="home">
-                <div class="home-text">
-                    <div class="home-logo">
-                        <img src="images/logo.png" alt="">
-                    </div>
-                    <h1>Hi, I'm <span>Jon</span></h1>
-                    <p>FULL-STACK DEVELOPER</p>
-                    <p>GAME DEVELOPER</p>
+                <div class="home-snippet">
+                    <img src="images/snippet.png" alt="code snippet decoration">
                 </div>
-                <div class="home-image">
-                    <img src="images/Home.png" alt="Home Image">
+                <div class="home-main">
+                    <div class="home-logo">
+                        <div class="pulse-logo"><img src="images/logo1.png" alt="logo text"></div>
+                        <div class="animate-logo2"><img src="images/logo2.png" alt="spinning logo part"></div>
+                        <div class="animate-logo3"><img src="images/logo3.png" alt="spinning logo part"></div>
+                        <div class="animate-logo4"><img src="images/logo4.png" alt="spinning logo part"></div>
+                        <div class="animate-logo5"><img src="images/logo5.png" alt="spinning logo part"></div>
+                        <div class="animate-logo6"><img src="images/logo6.png" alt="spinning logo part"></div>
+                    </div>
+                    <div class="home-text">
+                        <div>
+                            <h1>Hi, I'm <span>Jon</span></h1>
+                        </div>
+                        <div>
+                            <p>FULL-STACK DEVELOPER</p>
+                            <p>GAME DEVELOPER</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -47,7 +61,7 @@
                     <img src="images/aboutme.png" alt="aboutme">    
                 </div>
                 <div class="about-col-2">
-                    <h1>About <span>me</span></h1>
+                    <h1>About me</h1>
 
                     <p>I am an aspiring web developer with a strong foundation in .NET development. I am passionate about coding and always eager to learn. In addition to my formal education, I have independently crafted video games using Unity, which has helped me sharpen my problem-solving skills and provided me with hands-on software development experience.<br><br>Beyond the world of programming, I am also deeply passionate about music and can often be found playing my guitar. My journey in this field is just beginning and I am excited to take on new challenges, collaborate with like-minded individuals and continue expanding my skill set.</p>
 
@@ -127,7 +141,7 @@
        <!----------------services------------------>
     <div id="services">
         <div class="container">
-            <h1>My <span>services</span></h1>
+            <h1>Services</h1>
             <div class="services-list">
                 <div>
                     <i class="fa-solid fa-code"></i>
@@ -153,7 +167,7 @@
        <!----------------websites------------------>
     <div id="websites">
         <div class="container">
-            <h1>My <span>Websites</span></h1>
+            <h1>Websites</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="images/website2.png" alt="Spotify clone">
@@ -167,7 +181,7 @@
        <!----------------games------------------>
        <div id="games">
         <div class="container">
-            <h1>My <span>Games</span></h1>
+            <h1>Games</h1>
             <div class="work-list">
                 <div class="work">
                     
@@ -178,7 +192,7 @@
        <!----------------programs------------------>
        <div id="programs">
         <div class="container">
-            <h1>My <span>Programs</span></h1>
+            <h1>Programs</h1>
             <div class="work-list">
                 <div class="work">
                     
@@ -189,26 +203,9 @@
        <!----------------contact------------------>
        <div id="contact">
         <div class="container">
-            <h1>Contact <span>me</span></h1>
+            <h1>Contact</h1>
 
         </div>
     </div>
-
-
-<script>
-   var tablinks = document.getElementsByClassName("tab-links");
-   var tabcontents = document.getElementsByClassName("tab-contents");
-
-   function opentab(tabname){
-    for(tablink of tablinks){
-        tablink.classList.remove("active-link");
-    }
-    for(tabcontent of tabcontents){
-        tabcontent.classList.remove("active-tab");
-    }
-    event.currentTarget.classList.add("active-link");
-    document.getElementById(tabname).classList.add("active-tab");
-   }
-</script>
 </body>
 </html>
