--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
         <div class="container">
             <div class="home">
                 <div class="home-snippet">
-                    <img src="images/snippet.png" alt="code snippet decoration">
+                    <img class="parallax3D" src="images/snippet.png" alt="code snippet decoration">
                 </div>
                 <div class="home-main">
                     <div class="home-logo">
-                        <div class="pulse-logo"><img src="images/logo1.png" alt="logo text"></div>
-                        <div class="animate-logo2"><img src="images/logo2.png" alt="spinning logo part"></div>
-                        <div class="animate-logo3"><img src="images/logo3.png" alt="spinning logo part"></div>
-                        <div class="animate-logo4"><img src="images/logo4.png" alt="spinning logo part"></div>
-                        <div class="animate-logo5"><img src="images/logo5.png" alt="spinning logo part"></div>
-                        <div class="animate-logo6"><img src="images/logo6.png" alt="spinning logo part"></div>
+                        <div class="main-logo"><img src="images/logo1.png" class="parallax3D" alt="logo text"></div>
+                        <div class="animate-logo2"><img src="images/logo2.png" class="parallax3D" alt="spinning logo part"></div>
+                        <div class="animate-logo3"><img src="images/logo3.png" class="parallax3D" alt="spinning logo part"></div>
+                        <div class="animate-logo4"><img src="images/logo4.png" class="parallax3D" alt="spinning logo part"></div>
+                        <div class="animate-logo5"><img src="images/logo5.png" class="parallax3D" alt="spinning logo part"></div>
+                        <div class="animate-logo6"><img src="images/logo6.png" class="parallax3D" alt="spinning logo part"></div>
                     </div>
                     <div class="home-text">
                         <div>
@@ -48,6 +48,16 @@
                             <p>FULL-STACK DEVELOPER</p>
                             <p>GAME DEVELOPER</p>
                         </div>
+                        <div class="social-media">
+                            <ul>
+                                <li><a href="https://www.linkedin.com/in/jon-mendizabal" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+                                <li><a href="https://github.com/Connectslide121" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                                <li><a href="https://connect-slide-121.itch.io/" target="_blank"><i class="fa-brands fa-itch-io"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="home-snippet2">
+                        <img class="parallax3D" src="images/snippet2.png" alt="code snippet decoration">
                     </div>
                 </div>
             </div>
@@ -141,7 +151,6 @@
        <!----------------services------------------>
     <div id="services">
         <div class="container">
-            <h1>Services</h1>
             <div class="services-list">
                 <div>
                     <i class="fa-solid fa-code"></i>
