--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                     <a href="images/Jon Mendizabal - Resume.pdf" download class="btn">Download CV</a>
                 </div>
                 <div class="contact-right">
-                    <form>
+                    <form name="submit-to-google-sheet">
                         <input type="text" name="Name" placeholder="Your name" required>
                         <input type="email" name="Email" placeholder="Your email" required>
                         <textarea name="Message"  rows="6" placeholder="Your message"></textarea>
@@ -351,5 +351,16 @@
         <p>Copyright <i class="fa-regular fa-copyright"></i> 2023 Jon Mendizabal</p>
     </div>
 
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbyWMEbSjv7PkPlNGfHj21ZlGEIEAS4eRiStKutJzFmCFUwpoKddl21PHMYYs7qWgxDE/exec'
+        const form = document.forms['submit-to-google-sheet']
+      
+        form.addEventListener('submit', e => {
+          e.preventDefault()
+          fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+            .then(response => console.log('Success!', response))
+            .catch(error => console.error('Error!', error.message))
+        })
+      </script>
 </body>
 </html>
