adjust paddings margins etc

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             </div>
         </div>
     </div>
-    <div id="work">
+    <div id="my-work">
         <!----------------websites------------------>
         <div id="websites">
             <div class="container">
@@ -305,16 +305,6 @@
                                     <a href="https://github.com/Connectslide121/Flapry-Birb" target="_blank"><i class="fa-brands fa-github"></i></a>
                             </div>
                         </div>
-                        <div class="program">
-                            <img src="images/game1.png" alt="Flapry blirb game">
-                            <div class="layer">
-                                <h2>Flapry Blirb</h2>
-                                <p>My first ever game. A “flappy bird” style game made with Unity.</p>
-                                <h3>October 2023</h3>
-                                    <a href="https://github.com/Connectslide121/Flapry-Birb" target="_blank"><i class="fa-brands fa-github"></i></a>
-                            </div>
-                        </div>
-
                     </div>    
             </div>
         </div>
