--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div id="home">
-        <nav>
+        <nav id="navbar">
             <img src="images/NavLogo.png" class="nav-logo" alt="longlogo">
             <div class="social-media">
                 <ul>
@@ -37,33 +37,31 @@
 
         <div class="container">
             <div class="home">
-                <div class="home-main">
-                    <div class="background parallaxBackground">
-                        <img src="images/HomeBackground.png" alt="">
-                    </div>
-                    <div class="blobfixed">
-                        <div class="blobs parallaxBlobs">
-                            <img src="images/blobs.png" alt="">
-                        </div>
-    
+                <div class="background parallaxBackground">
+                    <img src="images/HomeBackground.png" alt="">
+                </div>
+                <div class="blobfixed">
+                    <div class="blobs parallaxBlobs">
+                        <img src="images/blobs.png" alt="">
                     </div>
 
-                    <div class="home-logo">
-                        <div class="main-logo"><img src="images/logo1.png" class="parallax3D" alt="logo text"></div>
-                        <div class="animate-logo2"><img src="images/logo2.png" class="parallax3D" alt="spinning logo part"></div>
-                        <div class="animate-logo3"><img src="images/logo3.png" class="parallax3D" alt="spinning logo part"></div>
-                        <div class="animate-logo4"><img src="images/logo4.png" class="parallax3D" alt="spinning logo part"></div>
-                        <div class="animate-logo5"><img src="images/logo5.png" class="parallax3D" alt="spinning logo part"></div>
-                        <div class="animate-logo6"><img src="images/logo6.png" class="parallax3D" alt="spinning logo part"></div>
+                </div>
+
+                <div class="home-logo">
+                    <div class="main-logo"><img src="images/logo1.png" class="parallax3D" alt="logo text"></div>
+                    <div class="animate-logo2"><img src="images/logo2.png" class="parallax3D" alt="spinning logo part"></div>
+                    <div class="animate-logo3"><img src="images/logo3.png" class="parallax3D" alt="spinning logo part"></div>
+                    <div class="animate-logo4"><img src="images/logo4.png" class="parallax3D" alt="spinning logo part"></div>
+                    <div class="animate-logo5"><img src="images/logo5.png" class="parallax3D" alt="spinning logo part"></div>
+                    <div class="animate-logo6"><img src="images/logo6.png" class="parallax3D" alt="spinning logo part"></div>
+                </div>
+                <div class="home-text">
+                    <div>
+                        <h1>Hi, I'm <span>Jon</span></h1>
                     </div>
-                    <div class="home-text">
-                        <div>
-                            <h1>Hi, I'm <span>Jon</span></h1>
-                        </div>
-                        <div>
-                            <p>FULL-STACK DEVELOPER</p>
-                            <p>GAME DEVELOPER</p>
-                        </div>
+                    <div>
+                        <p>FULL-STACK DEVELOPER</p>
+                        <p>GAME DEVELOPER</p>
                     </div>
                 </div>
             </div>
